# mcp-ffmpeg

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/ffmpeg_tools/: __init__.py  server.py  utils.py
src/ffmpeg_tools/tools/: __init__.py  audio.py  compose.py  overlay.py  video.py
tests/: requirements.txt  test_video_functions.py
