[project]
name = "mcp-ffmpeg"
version = "1.0.0"
description = "FFmpeg video/audio editing tools via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "mcp>=1.23.0,<2",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ffmpeg_tools"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
ffmpeg-tools = "ffmpeg_tools:main"
